--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-feedparser==6.0.11
-ollama==0.2.1
-Markdown~=3.7
+feedparser==6.0.8
+requests==2.31.0
+ollama==0.0.13
+beautifulsoup4==4.12.2
+filelock==3.12.0
