--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
     "feeds_source_file": "feeds.txt",
-    "report_directory": "articles",
-    "articles_per_feed": 10,
+    "report_directory": "Reports",
+    "articles_per_feed": 20,
     "processed_articles_file": "processed.json",
     "ollama": {
         "ip": "127.0.0.1",
